# pispas-reservation

./: Cargo.toml  README.md  tools.html
src/: main.rs
src/api/: errors.rs  middleware.rs  mod.rs  reservation.rs  restaurant.rs  table.rs  visual.rs
src/db/: mod.rs  models.rs  mongodb.rs
static/: admin.html  admin_debug.html  app.js  index.html  register.html  style.css
