[package]
name = "pispas-reservation"
version = "0.1.0"
edition = "2021"

[dependencies]
# MongoDB
#mongodb = "2.8"
mongodb = "3.2.3"
actix-web = "4.4"
actix-files = "0.6"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"